working custom player object